# Laplace

./: .gitignore  README.md  start.sh
backend/: README.md  anomaly.py  check_memory.py  covariates.py  data_cleaning.py  debug_forecast.py  debug_val.py  diagnostics.py  download_business_samples.py  download_classics.py  download_data.py  download_data_v2.py  ensemble.py  forecast.py  generate_samples.py  heuristics.py  main.py  model_registry.py  pyproject.toml  requirements.txt  scratch_timesfm.py  test_air.py  test_chronos.py  test_journey.py  test_limits.py  test_sprint1.py  test_sprint2.py  validation.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  logging.py  model_registry.py
backend/app/models/: __init__.py  schemas.py
backend/app/routers/: __init__.py  datasets.py  diagnostics.py  forecast.py  preprocessing.py  validation.py
backend/app/services/: __init__.py  anomalies.py  changepoint_adaptation.py  cleaning.py  conformal.py  covariates.py  diagnostics.py  ensemble.py  forecast.py  heuristics.py  validation.py
backend/data/: canadian_lynx.csv  ev_charging_demand.csv  marketing_roi.csv  monthly_sunspots.csv  national_grid.csv  saas_mrr.csv  sp500.csv  us_inflation_cpi.csv  vix.csv  walmart_m5.csv  website_traffic.csv
backend/scripts/: generate_datasets.py
backend/src/laplace/: __init__.py  (+2 more)
backend/tests/: conftest.py  test_backtest.py  test_datasets.py  test_diagnostics.py  test_ensemble.py  test_export.py  test_forecast_endpoint.py  test_forecasting.py  test_forecasting_covariates.py  test_health.py  test_preprocessing.py
(+109 files in other folders)
