[project]
name = "laplace"
version = "0.1.0"
description = "Time series forecasting app — foundation models vs classical baselines"
readme = "README.md"
authors = [
    { name = "Fabiano", email = "fbattaglin@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.28",
    "statsmodels>=0.14.6",
    "scipy>=1.17.1",
    "chronos-forecasting>=2.0.0",
    "timesfm[torch]>=1.3.0",
    "statsforecast>=2.0.0",
    "torch>=2.0.0",
    "numpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
